fixed project page images and reduced the width of the background to prevent overflow

--- a/src/components/Background/Background.css
+++ b/src/components/Background/Background.css
@@ -1,8 +1,8 @@
 .rain {
   position: absolute;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 90vw;
+  height: 100vh;
   z-index: -1;
 }
 
